--- a/pinky_gazebo/CMakeLists.txt
+++ b/pinky_gazebo/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(pinky_worlds)
+project(pinky_gazebo)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -27,6 +27,11 @@ install(
 install(
   DIRECTORY launch/
   DESTINATION share/${PROJECT_NAME}/launch
+)
+
+install(
+  DIRECTORY param/
+  DESTINATION share/${PROJECT_NAME}/param
 )
 
 if(BUILD_TESTING)
