--- a/pinky_gazebo/model/Marker2/model.config
+++ b/pinky_gazebo/model/Marker2/model.config
@@ -1,9 +1,11 @@
 <?xml version="1.0"?>
 
 <model>
-  <name>Marker3</name>
+  <name>Marker2</name>
   <version>1.0</version>
   <sdf version="1.6">model.sdf</sdf>
+  <sdf version="1.5">model-1_5.sdf</sdf>
+  <sdf version="1.4">model-1_4.sdf</sdf>
 
   <author>
     <name>Mikael Arguedas</name>
@@ -13,6 +15,5 @@
   <description>
     A model of AR marker
   </description>
-  
 
 </model>
