--- a/pinky_gazebo/package.xml
+++ b/pinky_gazebo/package.xml
@@ -13,6 +13,11 @@
   <depend>std_msgs</depend>
   <depend>gazebo_ros</depend>
 
+  <depend>gazebo_ros2_control</depend>
+  <depend>ros2_control</depend>
+  <depend>controller_manager</depend>
+  <depend>gazebo_plugins</depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
