--- a/pinky_gazebo/package.xml
+++ b/pinky_gazebo/package.xml
@@ -17,6 +17,8 @@
   <depend>ros2_control</depend>
   <depend>controller_manager</depend>
   <depend>gazebo_plugins</depend>
+  <depend>joint_state_broadcaster</depend>
+  <depend>diff_drive_controller</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
